1999-10-22  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.4

	* src/ypwhich.c: Don't include malloc.h.
	* src/yppasswd.c: Likewise.

1999-10-18  Thorsten Kukuk  <kukuk@suse.de>

	* src/yppasswd.c (main): Don't print success if we have printed
	  an error message earlier.

1999-07-30  Thorsten Kukuk  <kukuk@suse.de>

	* etc/nicknames: Change hosts alias to hosts.byname.

1999-06-29  Thorsten Kukuk  <kukuk@suse.de>

	* src/yppasswd.c: Add defines for no glibc systems.

	* src/ypmatch.c: Include more header files for Solaris

	* configure.in: check for rpc/clnt_soc.h
	* src/ypwhich.c: add rpc headers

	* lib/getline.c: Include getline.h
	* intl/libgettext.h: Fix some #if
	  Patches from Peter Breitenlohner <peb@mppmu.mpg.de>

1999-05-18  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.3

	* src/ypcat.c (print_data): Mark indata as unused.

1999-05-01  Thorsten Kukuk  <kukuk@suse.de>

	* man/nicknames.5.in: Fix typo.

1999-02-28  Thorsten Kukuk  <kukuk@suse.de>

	* src/yppasswd.c: Add prototype for getrpcport if needed.
	* src/ypset.c: Likewise.

1999-02-17  Thorsten Kukuk  <kukuk@suse.de>

	* src/Makefile.am: Fix rule for installing links for domainname.
	* po/de.po: Fix typos.

1998-11-11  Thorsten Kukuk  <kukuk@vt.uni-paderborn.de>

	* release version 2.2

	* src/ypwhich.c: Fix inclusion of local header files.
	* src/domainname.c: Likewise.
	* src/ypmatch.c: Likewise.
	* src/ypcat.c: Likewise.
	* src/yppasswd.c: Likewise.
	* src/yppoll.c: Likewise.
	* src/ypset.c: Likewise.

	* src/Makefile.am (INCLUDES): Remove -I$(top_srcdir)/lib, or
	  we will use the wrong headers on some systems.

	* configure.in (WARNFLAGS): Add much more option to find much more
	  problems.

1998-05-28  Thorsten Kukuk  <kukuk@vt.uni-paderborn.de>

	* release version 2.1

	* src/ypmatch.c (main): Return 1 if entry not found. Reported by
	  Klaus Steinberger <Klaus.Steinberger@Physik.Uni-Muenchen.DE>.

1998-05-26  Thorsten Kukuk  <kukuk@vt.uni-paderborn.de>
